--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,58 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap');
+.roboto-slab{
+  font-family: "Roboto Slab", serif;
+  font-optical-sizing: auto;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+section {
+  padding-top: 56px; /* Adjust this value based on your navbar height */
 }
+
+/************   Navbar.css *************/
+.navbar-brand {
+    font-weight: 700;
+  }
+  
+  .nav-link {
+    font-weight: bold;
+    font-size: 17px;
+  }
+  
+  .nav-link.active,
+  .nav-link:focus,
+  .nav-link:hover {
+    color: #000; /* Darker color for active link */
+    background-color: #e9ecef; /* Slightly darker background */
+    border-radius: 4px; /* Rounded corners */
+  }
+  
+  .custom-navbar-shadow {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  }
+  
+  .custom-dropdown-menu {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+    width: 300px !important;
+  }
+  
+  .custom-dropdown-menu .dropdown-item {
+    font-weight: bold;
+    padding: 10px 20px;
+  }
+  
+  .custom-dropdown-menu .dropdown-item:hover {
+    background-color: #f8f9fa;
+  }
+  
+
+
+  .client-img {
+    transition: transform 0.3s ease;
+  }
+  
+  .client-img:hover {
+    transform: scale(1.1);
+  }
