--- a/src/index.css
+++ b/src/index.css
@@ -56,3 +56,14 @@ section {
   .client-img:hover {
     transform: scale(1.1);
   }
+
+
+  /* ***************** Footer *****************/
+.footer1{
+  height: 50px;
+  background-color: #0f0b41;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
