--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,11 @@
 section {
   padding-top: 56px; /* Adjust this value based on your navbar height */
 }
+ /* Header size */
+ .more-weight{
+  /* font-size: 40px; */
+  font-weight: 700;
+ }
 
 /************   Navbar.css *************/
 .navbar-brand {
