--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,14 +1,19 @@
 .navbar {
+    background-color: #0f0f49;
     position: fixed;
     width: 100%;
     top: 0;
     z-index: 1000;
     box-sizing: border-box;
-    /* Ensures padding and borders are included in the element's width and height */
 }
 
 .navbar-brand {
     font-weight: 700;
+}
+
+#navbarSupportedContent ul li a {
+    color: white;
+    transition: color 0.3s ease, background-color 0.3s ease;
 }
 
 .nav-link {
@@ -26,38 +31,36 @@
 .nav-link:focus,
 .nav-link:hover {
     color: #000;
-    background-color: #e9ecef;
+    background-color: #020331;
     border-radius: 4px;
-}
-
-.custom-navbar-shadow {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 .custom-dropdown-menu {
-    background-color: #fff;
-    border: 1px solid #ccc;
+    background-color: #0f0f49;
+    border: 1px solid #ffffff;
     border-radius: 4px;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
     width: 300px !important;
+    transition: background-color 0.3s ease;
 }
 
-/* Add media query for better responsiveness */
-@media (max-width: 767px) {
-    .navbar-nav {
-        text-align: center;
-        /* Center align nav items on mobile */
-        width: 100%;
-        /* Ensure the nav items take full width on mobile */
-    }
+.custom-dropdown-menu .dropdown-item {
+    color: white;
+    padding: 10px 20px;
+}
 
-    .navbar-nav .nav-item {
-        margin-bottom: 10px;
-        /* Add margin for spacing between nav items */
-    }
+.custom-dropdown-menu .dropdown-item:hover {
+    background-color: #020331;
+    color: white;
+    border-radius: 4px;
+}
 
-    .navbar-nav .dropdown-menu {
-        width: 100% !important;
-        /* Ensure dropdown takes full width on mobile */
-    }
+
+
+/* Style for white hamburger icon */
+.navbar-toggler {
+    border-color: white;
+}
+
+.navbar-toggler .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=UTF8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
 }
