--- a/src/index.css
+++ b/src/index.css
@@ -27,8 +27,8 @@ section {
 /* ***************** Footer *****************/
 .footer1 {
   height: 50px;
-  background-color: #0f0b41;
-  color: white;
+  background-color: #0f0f49;
+  color: #d7d7d7;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -106,4 +106,15 @@ section {
     max-width: 100%;
     flex: 0 0 220px;
   }
+}
+
+/*  blue button css */
+.btn{
+  background-color: #0f0f49;
+  color: #d7d7d7;
+}
+
+.btn:hover{
+  background-color: #59B702;
+  border: 1px solid rgb(10, 193, 10);
 }
