--- a/src/index.css
+++ b/src/index.css
@@ -109,12 +109,37 @@ section {
 }
 
 /*  blue button css */
-.btn{
+.blueButton{
   background-color: #0f0f49;
+  border: 2px solid rgb(19, 78, 154);
   color: #d7d7d7;
 }
 
-.btn:hover{
+.blueButton:hover{
   background-color: #59B702;
-  border: 1px solid rgb(10, 193, 10);
+  border: 2px solid rgb(10, 193, 10);
+}
+
+
+.checkmark {
+  color: green;
+  margin-right: 10px;
+}
+
+
+
+
+.imageDesign {
+  border-radius: 20px;
+  border: 5px solid #0f0f49;
+  object-fit: cover;
+  object-position: center;
+  transition: filter 0.3s ease;
+  transform-origin: center;
+  filter: brightness(70%);
+}
+
+.imageContainer:hover .imageDesign {
+  filter: brightness(80%);
+  
 }
