--- a/src/index.css
+++ b/src/index.css
@@ -111,6 +111,17 @@ section {
   border: 2px solid rgb(10, 193, 10);
 }
 
+.greenButton{
+  background-color: #59B702;
+  border: 2px solid rgb(10, 193, 10);
+  color: white;
+}
+.greenButton:hover{
+  background-color: #418204;
+  border: 2px solid #356c01;
+  color: white;
+}
+
 .checkmark {
   color: green;
   margin-right: 10px;
@@ -161,4 +172,32 @@ section {
 
 .cardDesign:hover{
   box-shadow: 10px 10px 0px #59B702;
+}
+
+.iconCardDesign {
+  position: relative;
+  overflow: hidden;
+  z-index: 0;
+}
+
+.iconCardDesign::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #a9f3bd;
+  transform: translateX(-100%);
+  transition: transform 1s ease;
+  z-index: -1; 
+}
+
+.iconCardDesign:hover::before {
+  transform: translateX(0);
+}
+
+.iconCardDesign > * {
+  position: relative;
+  z-index: 1;
 }
