--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -16,9 +16,14 @@
     transition: color 0.3s ease, background-color 0.3s ease;
 }
 
+#navbarSupportedContent2 ul li a {
+    color: white;
+    transition: color 0.3s ease, background-color 0.3s ease;
+}
+
 .nav-link {
     font-weight: bold;
-    font-size: 17px;
+    font-size: 20px;
 }
 
 .nav-link.active {
